Fix some layout issues

--- a/_assets/src/base.reset.css
+++ b/_assets/src/base.reset.css
@@ -27,4 +27,9 @@ img {
 
 ul, ol {
   padding-left: var(--baseline);
+  overflow: auto;
 }
+
+  li ul, li ol {
+    margin-bottom: 0;
+  }
